tests/jtrrouter/errors/default_arrivallane_false/options.jtrrouter
--net-file=input_net.net.xml --route-files=input_flows.flows.xml -o routes.rou.xml --arrivallane xxx
